@@ -10,3 +10,5 @@ Added hooks for subclassing.
 == 3/30/12
 
 Added return self to end of reverse!
+Added sort_block to :new to provide sorting by return value of block.
+
